cabal-version: 3.8

name:           advent-of-code
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/lsmor/template-advent-of-code#readme>
homepage:       https://github.com/lsmor/template-advent-of-code#readme
bug-reports:    https://github.com/lsmor/template-advent-of-code/issues
author:         Keaton Brandt
copyright:      2023 Keaton Brandt
license:        BSD-3-Clause
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/KeatonTech/aoc2023

common deps
  default-extensions:
      TypeApplications
      OverloadedStrings
      LambdaCase
      TupleSections
      StrictData
      ImportQualifiedPost
      EmptyDataDeriving
  build-depends:
      megaparsec
    , base >=4.7 && <5
    , bytestring
    , containers
    , either
    , fixed-list
    , matrix
    , vector
    , split
    , search-algorithms
    , mtl
    , pointedlist
    , bytestring-trie
    , timeit
  other-modules:
      Paths_advent_of_code
  ghc-options:
    -Wall
  default-language: Haskell2010

-- Do not touch after this line. aoc-hs will edit it
executable day-3
  import: deps
  other-modules: Util
  hs-source-dirs:
      solutions
  main-is: day-3.hs

